--- a/graph.ipynb
+++ b/graph.ipynb
@@ -2,7 +2,137 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "f3d7bb9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, [2, 3, 0])\n",
+      "(2, [1, 3])\n",
+      "(3, [2, 1])\n",
+      "(0, [1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class UND_Graph:\n",
+    "    def __init__(self):\n",
+    "        self.graph={}\n",
+    "        \n",
+    "    def add_elemnts(self,u,v):\n",
+    "        if u not in self.graph:\n",
+    "            self.graph[u]=[]\n",
+    "        if v not in self.graph:\n",
+    "            self.graph[v]=[]\n",
+    "        self.graph[u].append(v)\n",
+    "        self.graph[v].append(u)\n",
+    "        \n",
+    "    def display(self):\n",
+    "        for i in self.graph.items():\n",
+    "            print(i)\n",
+    "\n",
+    "obj=UND_Graph()\n",
+    "obj.add_elemnts(1,2)\n",
+    "obj.add_elemnts(2,3)\n",
+    "obj.add_elemnts(1,3)\n",
+    "obj.add_elemnts(0,1)\n",
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "92dff4c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, [(2, 1), (3, 2), (0, 1)])\n",
+      "(2, [(1, 1), (3, 3)])\n",
+      "(3, [(2, 3), (1, 2)])\n",
+      "(0, [(1, 1)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class WTED_Graph:\n",
+    "    def __init__(self,directed=False):\n",
+    "        self.graph={}\n",
+    "        self.directed=directed\n",
+    "        \n",
+    "    def add_elemnts(self,u,v,w):\n",
+    "        if u not in self.graph:\n",
+    "            self.graph[u]=[]\n",
+    "        if v not in self.graph:\n",
+    "            self.graph[v]=[]\n",
+    "        \n",
+    "        self.graph[u].append((v,w))\n",
+    "        \n",
+    "        if not self.directed:\n",
+    "            self.graph[v].append((u,w))\n",
+    "            \n",
+    "        \n",
+    "    def display(self):\n",
+    "        for i in self.graph.items():\n",
+    "            print(i)\n",
+    "\n",
+    "obj=WTED_Graph()\n",
+    "obj.add_elemnts(1,2,1)\n",
+    "obj.add_elemnts(2,3,3)\n",
+    "obj.add_elemnts(1,3,2)\n",
+    "obj.add_elemnts(0,1,1)\n",
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "062a42c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, [2, 3])\n",
+      "(2, [3])\n",
+      "(3, [])\n",
+      "(0, [1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class D_Graph:\n",
+    "    def __init__(self):\n",
+    "        self.graph={}\n",
+    "        \n",
+    "    def add_elemnts(self,u,v):\n",
+    "        if u not in self.graph:\n",
+    "            self.graph[u]=[]\n",
+    "        if v not in self.graph:\n",
+    "            self.graph[v]=[]\n",
+    "        self.graph[u].append(v)\n",
+    "        \n",
+    "    def display(self):\n",
+    "        for i in self.graph.items():\n",
+    "            print(i)\n",
+    "\n",
+    "obj=D_Graph()\n",
+    "obj.add_elemnts(1,2)\n",
+    "obj.add_elemnts(2,3)\n",
+    "obj.add_elemnts(1,3)\n",
+    "obj.add_elemnts(0,1)\n",
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "93461d96",
    "metadata": {},
    "outputs": [
@@ -37,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "b0e826d2",
    "metadata": {},
    "outputs": [
@@ -70,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "7d0c28f1",
    "metadata": {},
    "outputs": [
@@ -83,7 +213,14 @@
       "(2, [0, 3, 4, 5])\n",
       "(3, [0, 1, 2, 5])\n",
       "(4, [0, 2])\n",
-      "(5, [2, 3])\n"
+      "(5, [2, 3])\n",
+      "0\n",
+      "1\n",
+      "3\n",
+      "2\n",
+      "4\n",
+      "5\n",
+      "[0, 1, 3, 2, 4, 5]\n"
      ]
     }
    ],
@@ -99,47 +236,21 @@
     "    graph[v].append(u)\n",
     "    \n",
     "for i in graph.items():\n",
-    "    print(i)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ffc17b76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dfs(graph,visited,node):\n",
+    "    print(i)\n",
+    "    \n",
+    "def dfs(graph,visited,node,ans):\n",
     "    if node in visited:\n",
     "        return\n",
     "    print(node)\n",
     "    visited.add(node)\n",
+    "    ans.append(node)\n",
     "    for neighbour in graph[node]:\n",
-    "        dfs(graph,visited,neighbour)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "dbb44ba6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "3\n",
-      "2\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
+    "        dfs(graph,visited,neighbour,ans)\n",
+    "\n",
     "visited=set()\n",
-    "dfs(graph,visited,0)"
+    "ans=[]\n",
+    "dfs(graph,visited,0,ans)\n",
+    "print(ans)\n"
    ]
   },
   {
